[Non ISO extended ASCII -> UTF-8] for some text files fix

--- a/contents/cstrike/manual/manual.htm
+++ b/contents/cstrike/manual/manual.htm
@@ -244,7 +244,7 @@ BODY
 		
 		
         Counter-Strike is a modification (MOD) to Valve
-        Software’s hit game Half-Life. It modifies the multiplayer aspects of
+        Softwareâ€™s hit game Half-Life. It modifies the multiplayer aspects of
         Half-Life to provide the player with an experience that a trained
         counter-terrorist unit or terrorist unit might have. Players will join
         either a terrorist or a counter-terrorist force and play in one of the
@@ -272,13 +272,13 @@ BODY
         <b>Getting Started</b></a>
         <hr width="20%" align="left" noshade size="1" color="#11242d">
            After installing Counter-Strike, you will want to
-          activate it through the Half-Life menu. To do this, choose ‘custom
-          game’ from the initial Half-Life menu, then select Counter-Strike
-          from the list that appears. Choose ‘activate’ and you should
+          activate it through the Half-Life menu. To do this, choose â€˜custom
+          gameâ€™ from the initial Half-Life menu, then select Counter-Strike
+          from the list that appears. Choose â€˜activateâ€™ and you should
           notice that the appearance of the menus has changed.
            The next thing you will want to do is familiarize
           yourself with the mapping of the game <a href="#Controls"><b>controls</b></a>
-          on your keyboard/mouse. Choose ‘configuration-&gt;<a href="#Controls"><b>controls</b></a>’
+          on your keyboard/mouse. Choose â€˜configuration-&gt;<a href="#Controls"><b>controls</b></a>â€™
           and look over the default keyboard configuration. To change any of the
           default mappings, double-click on the key/button field in the window.
           You will then be able to enter your desired key for that function. (A
@@ -287,7 +287,7 @@ BODY
           will no longer have a key mapping).
            If you have no previous experience with Half-Life,
           it is strongly recommended that you play the excellent tutorial
-          included with that game. See the ‘<a href="#Controls"><b>Controls</b></a>’
+          included with that game. See the â€˜<a href="#Controls"><b>Controls</b></a>â€™
           section below for a description of what each game <a href="#Controls"><b>control</b></a>
           does.</p>
 
@@ -308,10 +308,10 @@ BODY
           them from rescuing hostages.
            CTs win a round by finding the hostages and
           leading more than half of them to freedom. CTs can get the attention
-          of a hostage by moving near him then pressing their ‘Use’ key (see
+          of a hostage by moving near him then pressing their â€˜Useâ€™ key (see
           <a href="#Controls"><b>Controls</b></a>, Use). The hostage will now
           follow the CT back to the rescue zone. If a CT wants the hostage to
-          stop following, they need to press ‘Use’ again and the hostage
+          stop following, they need to press â€˜Useâ€™ again and the hostage
           will stay put. Sometimes when you have a group of hostages following
           you, they may block you into an area; you can push them out of the way
           by simply walking into them. CTs can also win a round by eliminating
@@ -337,7 +337,7 @@ BODY
           the bomb or by eliminating the Terrorists (if the Terrorists managed
           to plant the bomb before being eliminated, CTs must still defuse the
           bomb to win the round). To defuse the bomb, CTs must stand near the
-          bomb, target it then press and hold their ‘use’ key until the bomb
+          bomb, target it then press and hold their â€˜useâ€™ key until the bomb
           is defused. Buying a defuse kit will halve the time required to defuse
           a bomb.</p>
          <b>Escape<br>
@@ -402,7 +402,7 @@ BODY
             </tr>
             <tr>
               <td vAlign="top" width="41%" class="text">
-                <p class="text">‘Use’ a Hostage</p>
+                <p class="text">â€˜Useâ€™ a Hostage</p>
               </td>
               <td vAlign="top" width="59%" class="text">
                 <p class="text">$150 for individual, $100 for team mates</p>
@@ -789,7 +789,7 @@ BODY
 <TD WIDTH="33%" VALIGN="TOP" ALIGN="center" class="text">
 <P>R</TD>
 <TD WIDTH="33%" VALIGN="TOP" class="text">
-<P>Tops up your clip…good idea before joining a firefight.</TD>
+<P>Tops up your clipâ€¦good idea before joining a firefight.</TD>
 </TR>
 <TR><TD WIDTH="33%" VALIGN="TOP" class="text">
 <P>Drop Current Weapon</TD>
@@ -1514,7 +1514,7 @@ Toggles the Night vision on/off (must be bought via equipment menu first)</TD>
         Counter-Strike has realistically modeled weaponry. If you run and fire
         at the same time, your accuracy will be horrible (changes with different
         guns), Standing still increases accuracy and crouching is even better.
-        Also be aware of the guns recoil, holding down the trigger isn’t as
+        Also be aware of the guns recoil, holding down the trigger isnâ€™t as
         effective as short quick bursts. It is also important to know that all
         the rifles can shoot through walls to some extent. The Para Machine Gun,
         and the Desert Eagle Pistol can as well.</p>
